[build-system]
requires = ["hatchling>=1.17.1", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "phasespace"
description = "TensorFlow implementation of the Raubold and Lynch method for n-body events"
authors = [{ name = "Albert Puig Navarro", email = "apuignav@gmail.com" }]
maintainers = [{ name = "zfit", email = "zfit@physik.uzh.ch" }]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["TensorFlow", "phasespace", "HEP"]
urls = { Homepage = "https://github.com/zfit/phasespace" }
requires-python = ">=3.9"
dependencies = [
    "tensorflow>=2.16.0",
    "tensorflow_probability>=0.22.0",
]
dynamic = ["version"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.optional-dependencies]
tf = [
    "tensorflow >=2.16.0", # TODO(2.0): make this the only requirement, add versions, remove from install_requires
    "tensorflow_probability >=0.22.0",
]
tensorflow = ["phasespace[tf]"]
fromdecay = [
    "particle >= 0.16.0",
    "zfit >=0.12.0",
    "zfit-physics >= 0.6",
    "decaylanguage >= 0.12.0", # not required but everyone using this feature will likely use DecayLanguage
]
vector = ["vector >= 1.0.0"]
all = [
    "phasespace[fromdecay]",
    "phasespace[vector]",
    "phasespace[tf]",
]
test = [
    "phasespace[all]",
    "awkward>=1.0",
    "coverage",
    "flaky",
    "matplotlib",
    "nbval",
    "numpy",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "scipy",
    "uproot>=4.0",
    "wget",
]
doc = [
    "phasespace[fromdecay]",
    "phasespace[vector]",
    "graphviz",
    "Sphinx",
    "myst-nb",
    "sphinx_bootstrap_theme",
    "jupyter_sphinx",
    "sphinx-math-dollar",
]
dev = [
    "phasespace[doc]",
    "phasespace[test]",
    "bumpversion",
    "pre-commit",
    "twine",
    "watchdog",
]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/phasespace/_version.py"
metadata.allow-direct-references = true

[tool.distutils.bdist_wheel]
universal = 1

[tool.flake8]
exclude = """
benchmark,
data,
dist,
docs,
paper,
scripts,
utils"""
max-line-length = "110"
statistics = "True"
max-complexity = "30"

[tool.coverage.run]
branch = true
include = ["phasespace/*"]

[tool.pytest.ini_options]
addopts = """
--color=yes
--ignore=setup.py"""
filterwarnings = ["ignore:.*the imp module is deprecated in favour of importlib.*:DeprecationWarning"]
norecursedirs = ["tests/helpers"]


[tool.isort]
profile = "black"
src_paths = ["phasespace", "tests"]
