[metadata]
name = phasespace
description = TensorFlow implementation of the Raubold and Lynch method for n-body events
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/zfit/phasespace
author = Albert Puig Navarro
author_email = apuignav@gmail.com
maintainer = zfit
maintainer_email = zfit@physik.uzh.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics
keywords = TensorFlow, phasespace, HEP

[options]
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    tensorflow>=2.4,<2.6  # tensorflow.experimental.numpy
    tensorflow_probability>=0.11,<0.13
python_requires = >=3.6
include_package_data = True
testpaths = tests
zip_safe = False

[options.extras_require]
test =
    awkward
    coverage
    flaky
    matplotlib
    numpy
    pytest
    pytest-cov
    pytest-xdist
    scipy
    uproot4
    wget
doc =
    Sphinx
    sphinx_bootstrap_theme
dev =
    %(doc)s
    %(test)s
    bumpversion
    flake8
    twine
    watchdog

[bdist_wheel]
universal = 1

[flake8]
exclude =
    benchmark,
    data,
    dist,
    docs,
    paper,
    scripts,
    utils
max-line-length = 110
statistics = True
max-complexity = 30

[coverage:run]
branch = True
include =
    phasespace/*

[tool:pytest]
addopts =
    --ignore=setup.py
filterwarnings =
    ignore:.*the imp module is deprecated in favour of importlib.*:DeprecationWarning
norecursedirs =
    tests/helpers
