[metadata]
name = phasespace
description = TensorFlow implementation of the Raubold and Lynch method for n-body events
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/zfit/phasespace
author = Albert Puig Navarro
author_email = apuignav@gmail.com
maintainer = zfit
maintainer_email = zfit@physik.uzh.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Physics
keywords = TensorFlow, phasespace, HEP

[options]
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    tensorflow>=2.7
    tensorflow_probability>=0.15,<=0.17
    importlib-metadata; python_version <"3.8.0"
python_requires = >=3.7
include_package_data = True
testpaths = tests
zip_safe = False

[options.extras_require]
fromdecay =
    particle >= 0.16.0
    zfit
    zfit-physics >= 0.2
    decaylanguage >= 0.12.0     # not required but everyone using this feature will likely use DecayLanguage
test =
    %(fromdecay)s
    awkward
    coverage
    flaky
    matplotlib
    nbval
    numpy
    pytest
    pytest-cov
    pytest-xdist
    scipy
    uproot4
    wget
doc =
    %(fromdecay)s
    graphviz
    Sphinx
    myst-nb
    sphinx_bootstrap_theme
    jupyter_sphinx
    sphinx-math-dollar
dev =
    %(doc)s
    %(test)s
    bumpversion
    pre-commit
    twine
    watchdog

[bdist_wheel]
universal = 1

[flake8]
exclude =
    benchmark,
    data,
    dist,
    docs,
    paper,
    scripts,
    utils
max-line-length = 110
statistics = True
max-complexity = 30

[coverage:run]
branch = True
include =
    phasespace/*

[tool:pytest]
addopts =
    --color=yes
    --ignore=setup.py
filterwarnings =
    ignore:.*the imp module is deprecated in favour of importlib.*:DeprecationWarning
norecursedirs =
    tests/helpers
